code/python/InvestmentResearch/v0/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Investment Research client library for Python

[![API Version](https://img.shields.io/badge/api-v0.0.0-blue)](https://developer.factset.com/api-catalog/investment-research-api)
[![PyPi](https://img.shields.io/pypi/v/fds.sdk.InvestmentResearch/0.2.0)](https://pypi.org/project/fds.sdk.InvestmentResearch/v/0.2.0)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)


The Investment Research API provides a comprehensive set of functionalities for searching and retrieving research reports and documents from various contributors.

This API is designed to expose document search and document retrieval functionality. A document search will allow a request to query FactSet document databases based on certain search criteria specified in the request.

FactSet collects research reports and models from brokers, independent research providers, market research firms, rating agencies, and other publishers of research. These documents are processed and made available to clients within about two minutes of receipt.

FactSet delivers this content through two main products:

**FactSet Research Connect** – real-time research for investment managers entitled by the contributors to access the content.

**FactSet Aftermarket Research** – delayed research for investment bankers permitted by contributors to purchase the research.

The meta endpoints namely time-zones, categories, research-contributors, research-analysts, security-types and asset-types provide comprehensive lists of data that is used in the research endpoints.

  

This Python package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 0.0.0
- SDK version: 0.2.0
- Build package: org.openapitools.codegen.languages.PythonClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* Python >= 3.7

## Installation

### Poetry

```shell
poetry add fds.sdk.utils fds.sdk.InvestmentResearch==0.2.0
```

### pip

```shell
pip install fds.sdk.utils fds.sdk.InvestmentResearch==0.2.0
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Python environment.
   1. Install and activate python 3.10+. If you're using [pyenv](https://github.com/pyenv/pyenv):

      ```sh
      pyenv install 3.10.0
      pyenv shell 3.10.0
      ```

   2. (optional) [Install poetry](https://python-poetry.org/docs/#installation).
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code

```python
from fds.sdk.utils.authentication import ConfidentialClient

import fds.sdk.InvestmentResearch
from fds.sdk.InvestmentResearch.api import meta_api
from fds.sdk.InvestmentResearch.models import *
from dateutil.parser import parse as dateutil_parser
from pprint import pprint

# See configuration.py for a list of all supported configuration parameters.

# Examples for each supported authentication method are below,
# choose one that satisfies your use case.

# (Preferred) OAuth 2.0: FactSetOAuth2
# See https://github.com/FactSet/enterprise-sdk#oauth-20
# for information on how to create the app-config.json file
#
# The confidential client instance should be reused in production environments.
# See https://github.com/FactSet/enterprise-sdk-utils-python#authentication
# for more information on using the ConfidentialClient class
configuration = fds.sdk.InvestmentResearch.Configuration(
    fds_oauth_client=ConfidentialClient('/path/to/app-config.json')
)

# Basic authentication: FactSetApiKey
# See https://github.com/FactSet/enterprise-sdk#api-key
# for information how to create an API key
# configuration = fds.sdk.InvestmentResearch.Configuration(
#     username='USERNAME-SERIAL',
#     password='API-KEY'
# )

# Enter a context with an instance of the API client
with fds.sdk.InvestmentResearch.ApiClient(configuration) as api_client:
    # Create an instance of the API class
    api_instance = meta_api.MetaApi(api_client)

    try:
        # Returns the codes indicating asset types.
        # example, this endpoint has no required or optional parameters
        api_response = api_instance.get_asset_types()

        pprint(api_response)
    except fds.sdk.InvestmentResearch.ApiException as e:
        print("Exception when calling MetaApi->get_asset_types: %s\n" % e)

    # # Get response, http status code and response headers
    # try:
    #     # Returns the codes indicating asset types.
    #     # example, this endpoint has no required or optional parameters
    #     api_response, http_status_code, response_headers = api_instance.get_asset_types_with_http_info()


    #     pprint(api_response)
    #     pprint(http_status_code)
    #     pprint(response_headers)
    # except fds.sdk.InvestmentResearch.ApiException as e:
    #     print("Exception when calling MetaApi->get_asset_types: %s\n" % e)

    # # Get response asynchronous
    # try:
    #     # Returns the codes indicating asset types.
    #     # example, this endpoint has no required or optional parameters
    #     async_result = api_instance.get_asset_types_async()
    #     api_response = async_result.get()


    #     pprint(api_response)
    # except fds.sdk.InvestmentResearch.ApiException as e:
    #     print("Exception when calling MetaApi->get_asset_types: %s\n" % e)

    # # Get response, http status code and response headers asynchronous
    # try:
    #     # Returns the codes indicating asset types.
    #     # example, this endpoint has no required or optional parameters
    #     async_result = api_instance.get_asset_types_with_http_info_async()
    #     api_response, http_status_code, response_headers = async_result.get()


    #     pprint(api_response)
    #     pprint(http_status_code)
    #     pprint(response_headers)
    # except fds.sdk.InvestmentResearch.ApiException as e:
    #     print("Exception when calling MetaApi->get_asset_types: %s\n" % e)

```

### Using Pandas

To convert an API response to a Pandas DataFrame, it is necessary to transform it first to a dictionary.
```python
import pandas as pd

response_dict = api_response.to_dict()['data']

simple_json_response = pd.DataFrame(response_dict)
nested_json_response = pd.json_normalize(response_dict)
```

### Debugging

The SDK uses the standard library [`logging`](https://docs.python.org/3/library/logging.html#module-logging) module.

Setting `debug` to `True` on an instance of the `Configuration` class sets the log-level of related packages to `DEBUG`
and enables additional logging in Pythons [HTTP Client](https://docs.python.org/3/library/http.client.html).

**Note**: This prints out sensitive information (e.g. the full request and response). Use with care.

```python
import logging
import fds.sdk.InvestmentResearch

logging.basicConfig(level=logging.DEBUG)

configuration = fds.sdk.InvestmentResearch.Configuration(...)
configuration.debug = True
```

### Configure a Proxy

You can pass proxy settings to the Configuration class:

* `proxy`: The URL of the proxy to use.
* `proxy_headers`: a dictionary to pass additional headers to the proxy (e.g. `Proxy-Authorization`).

```python
import fds.sdk.InvestmentResearch

configuration = fds.sdk.InvestmentResearch.Configuration(
    # ...
    proxy="http://secret:password@localhost:5050",
    proxy_headers={
        "Custom-Proxy-Header": "Custom-Proxy-Header-Value"
    }
)
```

### Custom SSL Certificate

TLS/SSL certificate verification can be configured with the following Configuration parameters:

* `ssl_ca_cert`: a path to the certificate to use for verification in `PEM` format.
* `verify_ssl`: setting this to `False` disables the verification of certificates.
  Disabling the verification is not recommended, but it might be useful during
  local development or testing.

```python
import fds.sdk.InvestmentResearch

configuration = fds.sdk.InvestmentResearch.Configuration(
    # ...
    ssl_ca_cert='/path/to/ca.pem'
)
```

### Request Retries

In case the request retry behaviour should be customized, it is possible to pass a `urllib3.Retry` object to the `retry` property of the Configuration.

```python
from urllib3 import Retry
import fds.sdk.InvestmentResearch

configuration = fds.sdk.InvestmentResearch.Configuration(
    # ...
)

configuration.retries = Retry(total=3, status_forcelist=[500, 502, 503, 504])
```


## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/content/investment-research/v0*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*MetaApi* | [**get_asset_types**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/InvestmentResearch/v0/docs/MetaApi.md#get_asset_types) | **GET** /meta/asset-types | Returns the codes indicating asset types.
*MetaApi* | [**get_categories**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/InvestmentResearch/v0/docs/MetaApi.md#get_categories) | **GET** /meta/categories | Returns the categories.
*MetaApi* | [**get_research_analyst**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/InvestmentResearch/v0/docs/MetaApi.md#get_research_analyst) | **GET** /meta/research-analysts | Returns the research analysts&#39; details.
*MetaApi* | [**get_research_contributor**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/InvestmentResearch/v0/docs/MetaApi.md#get_research_contributor) | **GET** /meta/research-contributors | Returns the research contributors&#39; details.
*MetaApi* | [**get_security_types**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/InvestmentResearch/v0/docs/MetaApi.md#get_security_types) | **GET** /meta/security-types | Returns the codes indicating security types.
*MetaApi* | [**get_timezones**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/InvestmentResearch/v0/docs/MetaApi.md#get_timezones) | **GET** /meta/time-zones | Returns the time zones.
*ResearchApi* | [**get_count**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/InvestmentResearch/v0/docs/ResearchApi.md#get_count) | **POST** /count | Returns the count of documents for specified source.
*ResearchApi* | [**get_investment_research_data**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/InvestmentResearch/v0/docs/ResearchApi.md#get_investment_research_data) | **POST** /search | Retrieve investment research documents and related metadata within FactSet coverage.


## Documentation For Models

 - [AnalystId](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/InvestmentResearch/v0/docs/AnalystId.md)
 - [AssetClasses](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/InvestmentResearch/v0/docs/AssetClasses.md)
 - [AssetResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/InvestmentResearch/v0/docs/AssetResponse.md)
 - [AssetTypes](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/InvestmentResearch/v0/docs/AssetTypes.md)
 - [AssetTypesResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/InvestmentResearch/v0/docs/AssetTypesResponse.md)
 - [Categories](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/InvestmentResearch/v0/docs/Categories.md)
 - [CategoriesResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/InvestmentResearch/v0/docs/CategoriesResponse.md)
 - [CategoriesResponseObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/InvestmentResearch/v0/docs/CategoriesResponseObject.md)
 - [ContributorId](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/InvestmentResearch/v0/docs/ContributorId.md)
 - [CountRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/InvestmentResearch/v0/docs/CountRequest.md)
 - [CountRequestBody](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/InvestmentResearch/v0/docs/CountRequestBody.md)
 - [CountResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/InvestmentResearch/v0/docs/CountResponse.md)
 - [CountResponseObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/InvestmentResearch/v0/docs/CountResponseObject.md)
 - [CoverageActions](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/InvestmentResearch/v0/docs/CoverageActions.md)
 - [Disciplines](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/InvestmentResearch/v0/docs/Disciplines.md)
 - [Document](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/InvestmentResearch/v0/docs/Document.md)
 - [ErrorExample](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/InvestmentResearch/v0/docs/ErrorExample.md)
 - [ErrorResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/InvestmentResearch/v0/docs/ErrorResponse.md)
 - [Ids](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/InvestmentResearch/v0/docs/Ids.md)
 - [InvalidIdErrorObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/InvestmentResearch/v0/docs/InvalidIdErrorObject.md)
 - [InvestmentResearchResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/InvestmentResearch/v0/docs/InvestmentResearchResponse.md)
 - [InvestmentResearchResponseItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/InvestmentResearch/v0/docs/InvestmentResearchResponseItems.md)
 - [InvestmentResearchResponseMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/InvestmentResearch/v0/docs/InvestmentResearchResponseMeta.md)
 - [InvestmentResearchResponseMetaPagination](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/InvestmentResearch/v0/docs/InvestmentResearchResponseMetaPagination.md)
 - [IssuerTypes](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/InvestmentResearch/v0/docs/IssuerTypes.md)
 - [Periodicities](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/InvestmentResearch/v0/docs/Periodicities.md)
 - [Purposes](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/InvestmentResearch/v0/docs/Purposes.md)
 - [RatingActions](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/InvestmentResearch/v0/docs/RatingActions.md)
 - [ReportFoci](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/InvestmentResearch/v0/docs/ReportFoci.md)
 - [ResearchAnalystResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/InvestmentResearch/v0/docs/ResearchAnalystResponse.md)
 - [ResearchAnalystResponseObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/InvestmentResearch/v0/docs/ResearchAnalystResponseObject.md)
 - [ResearchApproaches](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/InvestmentResearch/v0/docs/ResearchApproaches.md)
 - [ResearchContributorResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/InvestmentResearch/v0/docs/ResearchContributorResponse.md)
 - [ResearchContributorResponseObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/InvestmentResearch/v0/docs/ResearchContributorResponseObject.md)
 - [SearchRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/InvestmentResearch/v0/docs/SearchRequest.md)
 - [SearchRequestBody](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/InvestmentResearch/v0/docs/SearchRequestBody.md)
 - [SearchRequestMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/InvestmentResearch/v0/docs/SearchRequestMeta.md)
 - [SearchRequestMetaPagination](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/InvestmentResearch/v0/docs/SearchRequestMetaPagination.md)
 - [SecurityResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/InvestmentResearch/v0/docs/SecurityResponse.md)
 - [SecurityTypes](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/InvestmentResearch/v0/docs/SecurityTypes.md)
 - [SecurityTypesResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/InvestmentResearch/v0/docs/SecurityTypesResponse.md)
 - [Sources](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/InvestmentResearch/v0/docs/Sources.md)
 - [TargetActions](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/InvestmentResearch/v0/docs/TargetActions.md)
 - [TimeZoneResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/InvestmentResearch/v0/docs/TimeZoneResponse.md)
 - [TimeZonesResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/InvestmentResearch/v0/docs/TimeZonesResponse.md)
 - [WeightingActions](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/InvestmentResearch/v0/docs/WeightingActions.md)


## Documentation For Authorization


## FactSetApiKey

- **Type**: HTTP basic authentication


## FactSetOAuth2

- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Notes for Large OpenAPI documents
If the OpenAPI document is large, imports in fds.sdk.InvestmentResearch.apis and fds.sdk.InvestmentResearch.models may fail with a
RecursionError indicating the maximum recursion limit has been exceeded. In that case, there are a couple of solutions:

Solution 1:
Use specific imports for apis and models like:
- `from fds.sdk.InvestmentResearch.api.default_api import DefaultApi`
- `from fds.sdk.InvestmentResearch.model.pet import Pet`

Solution 2:
Before importing the package, adjust the maximum recursion limit as shown below:
```
import sys
sys.setrecursionlimit(1500)
import fds.sdk.InvestmentResearch
from fds.sdk.InvestmentResearch.apis import *
from fds.sdk.InvestmentResearch.models import *
```

## Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

## Copyright

Copyright 2026 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.

